aks/0_full_aks_release.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: composedemodb
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: composedemodb
    spec:
      containers:
      - name: composedemodb
        image: mongo
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-volume
          mountPath: /data/db
      volumes:
        - name: mongo-volume
          persistentVolumeClaim:
            claimName: mongo-disk-claim
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: composedemoredis
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: composedemoredis
    spec:
      containers:
      - name: composedemoredis
        image: redis
        ports:
        - containerPort: 6379
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: desdemoregistry.azurecr.io/adv/backend:latest
        ports:
        - containerPort: 80
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: desdemoregistry.azurecr.io/adv/frontend:latest
        ports:
        - containerPort: 80
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: webserver
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
      - name: webserver
        image: desdemoregistry.azurecr.io/adv/webserver
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata: 
  name: composedemodb
spec:
  ports:
  - port: 27017
  selector:
    app: composedemodb
---
apiVersion: v1
kind: Service
metadata: 
  name: composedemoredis
spec:
  ports:
  - port: 6379
  selector:
    app: composedemoredis
---
apiVersion: v1
kind: Service
metadata: 
  name: backend
spec:
  ports:
  - port: 80
  selector:
    app: backend
---
apiVersion: v1
kind: Service
metadata: 
  name: frontend
spec:
  ports:
  - port: 80
  selector:
    app: frontend
---
apiVersion: v1
kind: Service
metadata:
  name: webserver
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: webserver
