aks/5_msi_full_paas.yml
apiVersion: v1
kind: Service
metadata: 
  name: backend
spec:
  ports:
  - port: 80
  selector:
    app: backend
---
apiVersion: v1
kind: Service
metadata: 
  name: frontend
spec:
  ports:
  - port: 80
  selector:
    app: frontend
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: backend
        aadpodidbinding: demo
    spec:
      containers:
      - name: backend
        image: desdemoregistry.azurecr.io/adv-msi/backend:#{Release.Artifacts.Backend.BuildId}#
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 5
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: frontend
        aadpodidbinding: demo
    spec:
      containers:
      - name: frontend
        image: desdemoregistry.azurecr.io/adv-msi/frontend:#{Release.Artifacts.Frontend.BuildId}#
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 5
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: people
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  tls:
  - hosts:
    - ... your domain here ...
    secretName: tls-people-secret
  rules:
  - host: ... your domain here ...
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 80
        path: /
